# p1

./: .gitignore  CMakeLists.txt  README.md
assets/: occipied.txt  untitledParkingLot.glb  userPreferences.txt
assets/parkingLots/: lotBajers.txt  lotCass.txt  occipied.txt  parkingGrid.txt  userPreferences.txt
cmake/: mtest.cmake
src/: Car_Input.h  Car_Types.h  Car_input.c  Licenseplate.c  Licenseplate.h  allFunctions.txt  bestSpot.c  busyness_prediction.c  busyness_prediction.h  car_assigner.c  car_assigner.h  filecheck.c  filecheck.h  license_plate.c  lot_matrix_utils.c  main.c  navbar.c  navbar.h  parkingLots.h  parking_lots_matrixs_utils.h  preferences.c  preferences.h  spot_assign.c
test/: CMakeLists.txt  assigner_test.c  busyness_test.c  my_test.c  reader_test.c  test_assigner.c
